# logging

./: .gitignore  LICENSE  async_iterator_examples.js  config.json  config.json.example  docker-compose.yaml  main.ts  package-lock.json  package.json  schema.sql  tsconfig.json
backend/: Cargo.toml  README.md
backend/src/: auth.rs  config.rs  cors.rs  database.rs  init.rs  js.rs  main.rs  runtime.js  state.rs
backend/src/auth/: errors.rs  handler.rs  identity.rs  mod.rs
backend/src/database/: actor.rs  database.rs  mod.rs
backend/src/jobs/: mod.rs  retention.rs
backend/src/logger/: handler.rs  mod.rs  models.rs  users.rs
backend/src/query/: handler.rs  mod.rs  models.rs
demo/: Cargo.toml  examples.md
demo/src/: logger.rs  main.rs
demo_ws/: main.js  main.ts
etc/: async_iterator_examples.js
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Auth.tsx  Home.tsx  Landing.tsx  Signin.tsx  api.ts
frontend/src/api/: v2.ts
frontend/src/auth/: Auth.tsx  config.ts  gapi.ts  index.ts
frontend/src/components/: Clickable.tsx  Header.tsx  QueryInputField.tsx  UserQueriesList.tsx  index.ts
frontend/src/home/: Home.tsx
frontend/src/loggerList/: LoggerList.tsx  index.ts
frontend/src/loggerList/components/: APIKeyDisplay.tsx  LoggerEntry.tsx  NewLoggerCreator.tsx
frontend/src/loggers/: Loggers.tsx  index.ts
frontend/src/queryList/: QueryList.tsx
frontend/src/queryList/components/: NewQueryCreator.tsx  QueryEntry.tsx
frontend/src/queryPage/: QueryPage.tsx
frontend/src/types/: logger.ts  query.ts
src/: api.ts  auth.ts  collector.ts  config.ts  database.ts  init.ts  log.ts  logger.ts  query.ts  retention.ts  router.ts  routing.ts  stream.ts  stream_value.ts  types.ts  websocket.ts
src/logger/: index.ts  user.ts
