[package]
name = "backend"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno = "0.23.0"
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
sqlx = { version = "0.1.1", features = [ "postgres" ] }
futures = "0.1.25"
async-std = { version = "1.4.0", features = [ "attributes" ] }