[package]
name = "backend"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno = "0.23.0"
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
sqlx = { version = "0.1.1", features = [ "postgres" ] }
futures = "0.1.25"
async-std = { version = "1.4.0", features = [ "attributes" ] }
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
reqwest = { version = "0.10.0", features = [ "json" ] }
openssl = { version = "0.10.26", features = [ "vendored" ] }
custom_error = "1.7.1"
frank_jwt = "3.1.2"