[package]
name = "demo"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = "0.2.0"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
openssl = { version = "0.10", features = [ "vendored" ] }
reqwest = "0.9.20"
rand = "0.7.2"
rand_core = "0.5.1"
chrono = "0.4.9"
